change color of float

--- a/all in one.css
+++ b/all in one.css
@@ -12,7 +12,7 @@ body
 	top:100px;
 	right:20px;
 	background-color:#087a3296;
-	color:white;
+	color:red;
 	border-radius:50px;
 	text-align:center;
     font-size:40px; /* change the logo size of whatsapp*/
