--- a/all in one.css
+++ b/all in one.css
@@ -114,7 +114,7 @@ body
 }
 .menu ul li a:hover
 {
-    background-color: white; /* when hover on home-service-contact etc..chnage color*/
+    background-color: yellow; /* when hover on home-service-contact etc..chnage color*/
     color:rgba(81, 170, 230, 0.753);
 }
 .menu1
